--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -218,6 +218,20 @@
 <li>In the new screen, scroll down until you see the updates that were added.</li>
 </ul>
 <p><img src="images/make-updates-show-updates.png" alt="make updates show updates"></p>
+<h1 id="user-roles-required">User Roles Required#</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>UPDATE _ USER (to add the SSH Key if this hasn&#39;t been done after creating the user)</li>
+<li>CREATE _ ENVIRONMENT</li>
+<li>UPDATE _ ENVIRONMENT</li>
+<li>DELETE _ ENVIRONMENT</li>
+<li>BOOST _ ENVIRONMENT</li>
+<li>REDEPLOY _ ENVIRONMENT</li>
+<li>START _ ENVIRONMENT</li>
+<li>STOP _ ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
