--- a/home/techguides/clone-environment.html
+++ b/home/techguides/clone-environment.html
@@ -128,6 +128,13 @@
 </ul>
 <div class="NOTE"><h5>Note</h5><p>It will take around 15-20 minutes for the clone environment to be created.</p>
 </div>
+<h1 id="user-roles-required">User Roles Required#</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>CREATE _ ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS </li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
