--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -216,6 +216,25 @@
 </ul>
 <p>The user can either start or stop all environments on certain dates, days or at a certain hour (UTC time zone). 
 <img src="images/environment-schedule.png" alt="deploy"></p>
+<h1 id="user-roles-required">User Roles Required#</h1>
+<p>To be able to perform basic  environment operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ ENVIRONMENTS</li>
+<li>CREATE _ ENVIRONMENT</li>
+<li>UPDATE _ ENVIRONMENT</li>
+<li>DELETE _ ENVIRONMENT</li>
+<li>BOOST _ ENVIRONMENT</li>
+<li>REDEPLOY _ ENVIRONMENT</li>
+<li>START _ ENVIRONMENT</li>
+<li>STOP _ ENVIRONMENT</li>
+<li>ALLOW <em> EXPORT </em> ENVIRONMENT</li>
+<li>START <em> ALL </em> ENVIRONMENT</li>
+<li>STOP <em> ALL </em> ENVIRONMENT</li>
+<li>SCHEDULE _ ENVIRONMENT</li>
+<li>ALLOW <em> EXPORT </em> ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
