--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -119,6 +119,13 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 <p><img src="images/env-template.png" alt=""></p>
 <p>Currently, the screen that opens will display an FCM and T24 default template. Click on the Template Type and select for one of the applications, for example T24 to see the latest retail Suites versions and other available templates.</p>
 <p><img src="images/env-template-type.png" alt=""></p>
+<h1 id="user-roles-required">User Roles Required#</h1>
+<p>To be able to create an environment the below permissions need to be enabled for your user:</p>
+<ul>
+<li>CREATE _ ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
