--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -110,6 +110,16 @@
 </ul>
 <p>More about the pre-requisites, import / export T24 applications can be found  <a href="http://documentation.temenos.cloud/home/pdf/develop-T24-packages.pdf " target="_blank"><u><strong>here</strong></u></a>.</p>
 <p><br></p>
+<h1 id="user-roles-required">User Roles Required#</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>CREATE _ ENVIRONMENT</li>
+<li>UPDATE _ ENVIRONMENT</li>
+<li>REDEPLOY _ ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS </li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p><br></p>
               <hr>
               
               <div id="disqus_thread"></div>
