--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -156,7 +156,7 @@ See further below how to generate the SSH key</p>
 </li>
 </ul>
 <p><br></p>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to create a user the below permission needs to be enabled for your user:</p>
 <ul>
 <li>CREATE _ USER</li>
