--- a/docfx_project/site/home/techguides/fcm-configuration.html
+++ b/docfx_project/site/home/techguides/fcm-configuration.html
@@ -123,7 +123,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="images/fcm-endpoints.png" alt="fcm endpoints"></p>
+<p><img src="images/fcm-endpoint.png" alt="fcm endpoints"></p>
 <ul>
 <li>A new login is required when accessing the first endpoint (Financial Crime Mitigation) &gt; Next you will see all available modules of the FCM Suite</li>
 <li>The Interfaces Module displays:<ul>
@@ -162,7 +162,7 @@
 <p><img src="images/fcm-sftp-auth.png" alt="sftp authentication"></p>
 <h2 id="process-messages-in-the-fcm-application">Process Messages in the FCM Application</h2>
 <ul>
-<li>On the right window, locate your envirnoment ID
+<li>On the right window, locate your environment ID
 <em>- Your organisation ID appears also on the top</em></li>
 </ul>
 <p><img src="images/fcm-sftp-id.png" alt="sftp id"></p>
@@ -180,9 +180,9 @@ When disconnecting and re-connecting to the server, the <strong>input</strong> f
 <li>Go to options, then Preferences</li>
 <li>Click on Transfer, then select Default and Edit 
 <img src="images/winscp-error1.png" alt="drag message"></li>
-<li>Select the ignore permission errors
-<img src="images/winscp-error2.png" alt="drag message"></li>
+<li>Select the ignore permission errors</li>
 </ul>
+<p><img src="images/winscp-error2.png" alt="drag message"></p>
 <h2 id="check-the-messages-in-transaction-alert-manager">Check the Messages in Transaction Alert Manager</h2>
 <ul>
 <li>Go to the portal to your environment</li>
