--- a/docfx_project/site/home/techguides/user-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/user-creation-in-paas.html
@@ -82,7 +82,7 @@
 <h1 id="introduction">Introduction</h1>
 
 <p>This document can be used by technical staff who need to create Users on the Temenos Continuous Deployment Platform and associate to each user a ssh key. </p>
-<h2 id="how-to-create-users">How to create <strong>Users</strong></h2>
+<h2 id="how-to-create-users">How to create Users</h2>
 <p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. In this way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
 <p>The users can access their organisation only, view their user profiles and change their password. Note that only the users with the &#39;Amin&#39; permission can create more users. To create a new user, please refer to the below:</p>
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
@@ -94,8 +94,8 @@
 <p><img src="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\techguides\images\users-tab.png" alt=""></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
 <h1 id="user-roles-management">User Roles Management</h1>
-<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).
-The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
+<p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
+<p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
 <p><img src="images/create-user-role.png" alt="user"></p>
 <p>The admin can select which permissions to set to each user.
 <img src="images/create-user-role-permissions.png" alt="user"></p>
@@ -106,22 +106,7 @@ The administrator can create more users and navigate to the Roles section on the
 <li>click &#39;Edit&#39; on the user</li>
 <li>choose from the drop-down list the role that needs to be assigned </li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click here to get an overview of the permissions.</p>
-<p>Please find below a set of recommended user roles for your organisation:</p>
-<p><img src="images/create-user-select-role.png" alt="user"></p>
-<h2 id="administrator">Administrator</h2>
-<p>Scope: the user has full overview over the organization&#39;s capabilities and users (can create users and assign different roles)</p>
-<p>Set permissions: select all permissions</p>
-<h2 id="developer">Developer</h2>
-<p>Scope: the user can create/ run environments/ factories etc. The Developer does not need the metadata or visibility on the users.</p>
-<p>Set permissions (you can customize them at your convenience):  ABORT_FACTORY_RUN, ALLOW_CUSTOM_TEMPLATES, ALLOW_EXPORT_ENVIRONMENT, ASSIGN_ROLE, BOOST_ENVIRONMENT, CLONE_STREAM, CREATE_COMPONENT, CREATE_ENVIRONMENT, CREATE_FACTORY, CREATE_ORG_METADATA, CREATE_PRODUCT, CREATE_ROLE, CREATE_STAGE, CREATE_STREAM, CREATE_USER, CREATE_USER_METADATA, DELETE_COMPONENT, DELETE_ENVIRONMENT, DELETE_STAGE, DELETE_STREAM, DELETE_USER_METADATA, MANAGE_COMPONENTS, MANAGE_PRODUCTS, MANAGE_ROLES, MANAGE_STAGES, MANAGE_STREAMS, REDEPLOY_ENVIRONMENT, SCHEDULE_ENVIRONMENT, SCHEDULE_FACTORY, SCHEDULE_FACTORY, START_ALL_ENVIRONMENT, START_ENVIRONMENT, START_FACTORY_RUN, STOP_ALL_ENVIRONMENT, STOP_ENVIRONMENT, UPDATE_ENVIRONMENT, UPDATE_FACTORY, UPDATE_ORG_METADATA, UPDATE_PRODUCT, UPDATE_ROLE, UPDATE_STAGE, UPDATE_STREAM, UPDATE_USER, UPDATE_USER_METADATA, VIEW_FACTORY_RUN_HISTORY</p>
-<h2 id="reader">Reader</h2>
-<p>Scope: the user has permission to see all records but cannot do any changes.</p>
-<p>Set permissions: MANAGE_STREAM, MANAGE_STAGES, MANAGE_PRODUCTS, MANAGE_FACTORIES, MANAGE_ENVIRONMENTS, MANAGE_USERS, MANAGE_ROLES, VIEW_FACTORY_RUN_HISTORY, MANAGE_ORG_METADATA, MANAGE_COMPONENTS</p>
-<div class="NOTE"><h5>Note</h5><p>Please note that by &#39;manage&#39; the user can only view the streams, stages, products, factories, environments, users, roles, the factory run history, organization metadata and components. A user with the &#39;reader&#39; role cannot edit anything. </p>
-</div>
-<p>All the roles can be customized to every user&#39;s needs.</p>
-<p>Depending on the organization role, a user may/ may not have several permissions (eg. if the organization does not have the assemble module, then the user will not be able to see the stages, the streams. The user will only see the environments, users and probably the metadata).</p>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <strong><a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a></strong> to get an overview of the permissions.</p>
 <h1 id="how-to-use-putty-ssh-client-for-ssh-key-generation">How to use PuTTY SSH client for SSH key generation.</h1>
 <p>Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
 <ul>
