--- a/docfx_project/site/home/techguides/environment-basic-operations.html
+++ b/docfx_project/site/home/techguides/environment-basic-operations.html
@@ -85,40 +85,48 @@
 <br></p>
 <p><img src="images/buttons-all.png" alt="buttons"></p>
 <p><br></p>
-<h2 id="environment-buttons">Environment buttons:</h2>
-<p><img src="images/start-all-user-env.png" alt="start"> <strong>Start All User Environments</strong> button:</p>
+<h2 id="environment-buttons">Environment buttons</h2>
 <ul>
-<li>Use this button to only start all user environments.</li>
-</ul>
-<p><img src="images/stop-all-user-env.png" alt="start"> <strong>Stop All User Environments</strong> button:</p>
-<ul>
-<li>Stops all running VMs that are part of the Environment.</li>
-</ul>
-<p><img src="images/button-refresh.png" alt="start"> <strong>Refreshing</strong> the page:</p>
-<ul>
-<li>Use this button to refresh any action in progress (related to an environment but also to a factory).</li>
+<li><p><strong>Start All User Environments</strong> button - use this button to only start all user environments</p>
+<p><img src="images/start-all-user-env.png" alt="start"> </p>
+</li>
 </ul>
 <p><br></p>
-<p><img src="images/button-new-environment.png" alt="start"> <strong>Creating</strong> a new environment:</p>
 <ul>
-<li>Displays the fields required to create an environment. here you can give a name and a description to your environment and choose a template.</li>
+<li><p><strong>Stop All User Environments</strong> button - stops all running VMs that are part of the Environment</p>
+<p><img src="images/stop-all-user-env.png" alt="start"> </p>
+</li>
 </ul>
 <p><br></p>
-<p><img src="images/button-clone.png" alt="start"> <strong>Cloning</strong> an environment:</p>
 <ul>
-<li>Creates an identical environment by copying the Environment and configuration repository.</li>
+<li><strong>Refreshing</strong> the page - use this button to refresh any action in progress (related to an environment but also to a factory)
+<img src="images/button-refresh.png" alt="start"> </li>
 </ul>
 <p><br></p>
-<p><img src="images/button-edit.png" alt="start"> <strong>Editing</strong> an environment:</p>
 <ul>
-<li>Allows you to change the name and the description of an environment.</li>
+<li><p><strong>Creating a new environment</strong> - displays the fields required to create an environment. here you can give a name and a description to your environment and choose a template</p>
+<p><img src="images/button-new-environment.png" alt="start"> </p>
+</li>
 </ul>
 <p><br></p>
-<p><img src="images/button-delete.png" alt="delete"> <strong>Deleting</strong> and environment:</p>
 <ul>
-<li>Removes all resources including VMs and configuration repository that are part of an Environment.</li>
+<li><p><strong>Cloning</strong> an environment - creates an identical environment by copying the Environment and configuration repository</p>
+<p><img src="images/button-clone.png" alt="start"> </p>
+</li>
 </ul>
-<h2 id="t24-release-section---available-actions">T24 Release section - available actions:</h2>
+<p><br></p>
+<ul>
+<li><p><strong>Editing</strong> an environment - allows you to change the name and the description of an environment</p>
+<p><img src="images/button-edit.png" alt="start"> </p>
+</li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Deleting</strong> and environment - removes all resources including VMs and configuration repository that are part of an Environment</p>
+<p><img src="images/button-delete.png" alt="delete"> </p>
+</li>
+</ul>
+<h2 id="t24-release-section---available-actions">T24 Release section - available actions</h2>
 <h3 id="span-stylecolororangefont-weight1000endpointsspan"><span style="color:orange;font-weight:1000;"><strong>Endpoints</strong>:</span></h3>
 <ul>
 <li><p>GO TO APPLICATION - clicking this endpoint, a new tab containing the T24 BrowserWeb URL will open in a new browser window. The username and password to be used here will have been sent via email.</p>
@@ -134,31 +142,36 @@
 <li>tcdSFTP.temenos.cloud - allows you to copy the SFTP link.</li>
 <li>Design Studio Kit - you can start downloading Design Studio tool (DS version is compatible to your environment). </li>
 </ul>
-<h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong>:</span></h3>
-<p><img src="images/button-start.png" alt="start"> <strong>Starting</strong> an environment:</p>
+<h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong></span></h3>
 <ul>
+<li><strong>Starting</strong> an environment:</li>
 <li><p>After creating an environment, the Start button is automatically disabled as the environment is running. It will be enabled if an environment is stopped and it will start all the instances specified in the Environment configuration.</p>
 </li>
 <li><p>When the environment is stopped, start button is supposed to start the VMs where the database and the application server of a T24 environment are installed and also to start the application server (jboss, wildfly, WebSphere, etc.) so that T24 to be up and running. </p>
 </li>
-<li>However, please <strong>note</strong> that start button is not triggering also the deployment of whatever is present into the associated Git repository (such as something that was committed when the environment was stopped or a T24 update package ( L1 development) that was not yet successfully deployed to the T24 area).</li>
+<li><p>However, please <strong>note</strong> that start button is not triggering also the deployment of whatever is present into the associated Git repository (such as something that was committed when the environment was stopped or a T24 update package ( L1 development) that was not yet successfully deployed to the T24 area).</p>
+<p><img src="images/button-start.png" alt="start"> </p>
+</li>
 </ul>
 <p><br></p>
-<p><img src="images/button-stop.png" alt="stop"> <strong>Stopping</strong>  an environment:</p>
 <ul>
-<li>Stops all running VMs that are part of the Environment.</li>
+<li><p><strong>Stopping</strong>  an environment - stops all running VMs that are part of the Environment.</p>
+<p><img src="images/button-stop.png" alt="stop"> </p>
+</li>
 </ul>
 <p><br></p>
-<p><img src="images/button-rebuild.png" alt="rebuild"> <strong>Rebuilding</strong> an environment:</p>
 <ul>
-<li>It recreates the resourses into the cloud and re-installs T24 and H2 db.</li>
-<li>This is used for example when modifying the application templates (eg. changing the T24 displayed name or adding a new application).</li>
+<li><p><strong>Rebuilding</strong> an environment - it recreates the resourses into the cloud and re-installs T24 and H2 db. This is used for example when modifying the application templates (eg. changing the T24 displayed name or adding a new application).</p>
+<p><img src="images/button-rebuild.png" alt="rebuild"> </p>
+</li>
 </ul>
 <p><br></p>
-<p><img src="images/button-export.png" alt="export"> <strong>Exporting</strong> an environment:</p>
 <ul>
-<li>Allows to export and import an environment or a database through SFTP server.</li>
+<li><p><strong>Exporting</strong> an environment  allows to export and import an environment or a database through SFTP server</p>
+<p><img src="images/button-export.png" alt="export"> </p>
+</li>
 </ul>
+<p><br></p>
 <p>Clicking the &#39;Export Environment&#39; button will generate a zip file on the tcdSFTP.temenos.cloud portal containing:</p>
 <ul>
 <li>all jar files deployed in T24 sandbox and the correspondent module.xml file;</li>
@@ -166,21 +179,25 @@
 <li>all war files deployed in the T24 sandbox and the Jboss server log.</li>
 </ul>
 <h2 id="database-section---available-actions">Database section - available actions</h2>
-<h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong>:</span></h3>
-<p><img src="images/button-export.png" alt="export"> <strong>Exporting</strong> the database:</p>
-<p>By clicking the &quot;Export database&quot; button a zip file will be generated in the tcdSFTP.temenos.cloud portal which will contain the current database of the sandbox. Note: This database can be used as a backup that can be deployed later on into the sandbox as a duplicate for testing/development or for local development before deploying to the cloud.</p>
-<h3 id="span-stylecolororangefont-weight1000endpointsspan"><span style="color:orange;font-weight:1000;"><strong>Endpoints</strong>:</span></h3>
+<h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong></span></h3>
+<ul>
+<li><p><strong>Export</strong> the database - by clicking the &quot;Export database&quot; button a zip file will be generated in the tcdSFTP.temenos.cloud portal which will contain the current database of the sandbox. Note: This database can be used as a backup that can be deployed later on into the sandbox as a duplicate for testing/development or for local development before deploying to the cloud.</p>
+<p><img src="images/button-export.png" alt="export"> </p>
+</li>
+</ul>
+<h3 id="span-stylecolororangefont-weight1000endpointsspan"><span style="color:orange;font-weight:1000;"><strong>Endpoints</strong></span></h3>
 <ul>
 <li>tcdSFTP.temenos.cloud - allows you to copy the SFTP link.</li>
 </ul>
 <p><br></p>
 <h2 id="repository-section---available-actions">Repository section - available actions</h2>
-<h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong>:</span></h3>
-<p><img src="images/button-deploy.png" alt="deploy"><strong>Deploying</strong></p>
+<h3 id="span-stylecolororangefont-weight1000buttonsspan"><span style="color:orange;font-weight:1000;"><strong>Buttons</strong></span></h3>
 <ul>
-<li>To be used when deploying newly added plugins, endpoints, updates, web services, packages etc.</li>
+<li><p><strong>Deploy</strong> button - used when deploying newly added plugins, endpoints, updates, web services, packages etc.</p>
+<p><img src="images/button-deploy.png" alt="deploy"></p>
+</li>
 </ul>
-<h3 id="span-stylecolororangefont-weight1000endpointsspan"><span style="color:orange;font-weight:1000;"><strong>Endpoints</strong>:</span></h3>
+<h3 id="span-stylecolororangefont-weight1000endpointsspan"><span style="color:orange;font-weight:1000;"><strong>Endpoints</strong></span></h3>
 <p>This section displays the GitLab repository correspondent to your T24 sandbox that you can copy it in order to clone the repository.</p>
 <ul>
 <li>example: git@tcdGitlab.temenos.cloud:1dyomzt4lxuyo/corebanking.git</li>
