--- a/home/techguides/access-fcm-ud-directories.html
+++ b/home/techguides/access-fcm-ud-directories.html
@@ -186,7 +186,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ USER</li>
