--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -162,7 +162,7 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 </div>
 </li>
 </ul>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
