--- a/home/techguides/clone-environment.html
+++ b/home/techguides/clone-environment.html
@@ -128,7 +128,7 @@
 </ul>
 <div class="NOTE"><h5>Note</h5><p>It will take around 15-20 minutes for the clone environment to be created.</p>
 </div>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
