--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -216,7 +216,7 @@
 </ul>
 <p>The user can either start or stop all environments on certain dates, days or at a certain hour (UTC time zone). 
 <img src="images/environment-schedule.png" alt="deploy"></p>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to perform basic  environment operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>MANAGE _ ENVIRONMENTS</li>
