--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -228,7 +228,7 @@
 </li>
 </ul>
 <p><img src="./images/db-check-record.png" alt=""> </p>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
