--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -118,7 +118,6 @@
 <div class="NOTE"><h5>Note</h5><p>If you already have installed a SSH key generator client, you can skip this step.</p>
 </div>
 <p>•   Download the installer from <a href="http://www.putty.org/" title="http://www.putty.org/">http://www.putty.org/</a></p>
-<p><img src="images/putty-download.png" alt="putty download"></p>
 <p>•   Run the installer and click <strong>Next</strong> on each screen, without changing anything in configurations. Click <strong>Finish</strong> once completed.</p>
 <h2 id="how-to-create-the-ssh-keys-pair-public-and-private-keys">How to create the SSH keys (pair public and private keys)</h2>
 <p>•   Open PuTTYgen and click Generate button:</p>
@@ -140,9 +139,8 @@ See further below how to generate the SSH key</p>
 <p><img src="images/user-details.png" alt="new user"></p>
 <p>•   Public SSH key needs to be pasted in SSH Key text box. Open Windows Explorer and locate your public key generated using PuTTY Key Generator. </p>
 <p><img src="images/putty-keygen-publicselect.png" alt="paste key text"></p>
-<p>• Right click and open it with notepad. Select all and copy to clipboard.</p>
-<p><img src="images/copy-key.png" alt="copy key"></p>
-<p>•   Paste the copied text into the SSH Key text box and click Create user button.</p>
+<p>• Right click and open it with notepad. Select all and copy to clipboard. Paste the copied text into the SSH Key text box and click Create user button.</p>
+<p><img src="images/user_ssh_key.png" alt="user_ssh_key"></p>
 <ul>
 <li>Your user is now available in the user list:</li>
 </ul>
@@ -157,6 +155,11 @@ See further below how to generate the SSH key</p>
 </li>
 <li><p>For further details or issues related to Gitlab SSH keys usage, or other operating systems (MAC, Linux), please consult this link:  [https://help.github.com/articles/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent/](</p>
 </li>
+</ul>
+<h1 id="user-roles-required">User Roles Required</h1>
+<p>To be able to create a user the below permission needs to be enabled for your user:</p>
+<ul>
+<li>CREATE _ USER</li>
 </ul>
 <p><br></p>
               <hr>
